--- a/formcontrol.lfm
+++ b/formcontrol.lfm
@@ -1,144 +1,263 @@
 object FrmControl: TFrmControl
-  Left = 638
-  Height = 321
-  Top = 430
-  Width = 475
+  Left = 567
+  Height = 414
+  Top = 212
+  Width = 482
   Caption = 'Управление табло'
-  ClientHeight = 321
-  ClientWidth = 475
+  ClientHeight = 414
+  ClientWidth = 482
   DefaultMonitor = dmDesktop
   DesignTimePPI = 120
   KeyPreview = True
+  OnCreate = FormCreate
+  OnDestroy = FormDestroy
   OnShow = FormShow
   Position = poScreenCenter
-  SessionProperties = 'EdtNameLeft.Text;EdtNameRight.Text;SpnEdtScoreLeft.Value;SpnEdtScoreRight.Value;RdGrpMonitors.ItemIndex'
-  LCLVersion = '2.1.0.0'
+  SessionProperties = 'ChckBxTelegram.Checked;EdtChat.Text;EdtHandoutFile.FileName;EdtNameLeft.Text;EdtNameRight.Text;EdtToken.Text;RdGrpMonitors.ItemIndex;SpnEdtScoreLeft.Value;SpnEdtScoreRight.Value;ChckBxTelegramScoreWhileMaximize.Checked;ChckBxTelegramHandout.Checked'
+  LCLVersion = '2.2.0.4'
+  object PgCntrlMain: TPageControl
+    Left = 0
+    Height = 288
+    Top = 0
+    Width = 482
+    ActivePage = TbShtHome
+    Align = alTop
+    TabIndex = 0
+    TabOrder = 0
+    object TbShtHome: TTabSheet
+      Caption = 'Управление'
+      ClientHeight = 255
+      ClientWidth = 474
+      object SpnEdtScoreLeft: TSpinEdit
+        Left = 16
+        Height = 38
+        Top = 128
+        Width = 120
+        Font.Height = 30
+        MaxValue = 6
+        OnChange = SpnEdtScoreLeftChange
+        ParentFont = False
+        TabOrder = 0
+      end
+      object LblLeftScore: TLabel
+        Left = 24
+        Height = 20
+        Top = 104
+        Width = 74
+        Caption = 'Счет слева'
+      end
+      object SpnEdtScoreRight: TSpinEdit
+        Left = 256
+        Height = 38
+        Top = 128
+        Width = 120
+        Font.Height = 30
+        MaxValue = 6
+        OnChange = SpnEdtScoreRightChange
+        ParentFont = False
+        TabOrder = 1
+      end
+      object LblRightScore: TLabel
+        Left = 264
+        Height = 20
+        Top = 104
+        Width = 84
+        Caption = 'Счет справа'
+      end
+      object EdtNameLeft: TLabeledEdit
+        Left = 16
+        Height = 31
+        Top = 48
+        Width = 208
+        EditLabel.Height = 20
+        EditLabel.Width = 208
+        EditLabel.Caption = 'Слева'
+        Font.Height = 24
+        ParentFont = False
+        TabOrder = 2
+        OnChange = EdtNameLeftChange
+      end
+      object EdtNameRight: TLabeledEdit
+        Left = 256
+        Height = 31
+        Top = 48
+        Width = 208
+        EditLabel.Height = 20
+        EditLabel.Width = 208
+        EditLabel.Caption = 'Справа'
+        Font.Height = 24
+        ParentFont = False
+        TabOrder = 3
+        OnChange = EdtNameRightChange
+      end
+      object BtnScoreAddLeft: TButton
+        Left = 136
+        Height = 38
+        Top = 128
+        Width = 88
+        Caption = '+'
+        Font.Height = 30
+        Font.Style = [fsBold]
+        OnClick = BtnScoreAddLeftClick
+        ParentFont = False
+        TabOrder = 4
+      end
+      object BtnScoreAddRight: TButton
+        Left = 376
+        Height = 39
+        Top = 128
+        Width = 88
+        Caption = '+'
+        Font.Height = 30
+        Font.Style = [fsBold]
+        OnClick = BtnScoreAddRightClick
+        ParentFont = False
+        TabOrder = 5
+      end
+    end
+    object TbShtHandout: TTabSheet
+      Caption = 'Раздат. материал'
+      ClientHeight = 255
+      ClientWidth = 474
+      object EdtHandoutFile: TFileNameEdit
+        Left = 8
+        Height = 28
+        Top = 32
+        Width = 457
+        OnAcceptFileName = EdtHandoutFileAcceptFileName
+        FilterIndex = 0
+        HideDirectories = False
+        ButtonWidth = 29
+        NumGlyphs = 1
+        MaxLength = 0
+        TabOrder = 0
+      end
+      object LblHandoutFile: TLabel
+        Left = 16
+        Height = 20
+        Top = 8
+        Width = 136
+        Caption = 'Файл изображения'
+        FocusControl = EdtHandoutFile
+      end
+    end
+    object TbShtOptions: TTabSheet
+      Caption = 'Настройки'
+      ClientHeight = 255
+      ClientWidth = 474
+      object PgCntrlOptions: TPageControl
+        Left = 0
+        Height = 255
+        Top = 0
+        Width = 474
+        ActivePage = TbShtTelegram
+        Align = alClient
+        Style = tsFlatButtons
+        TabIndex = 0
+        TabOrder = 0
+        object TbShtTelegram: TTabSheet
+          Caption = 'Телеграм'
+          ClientHeight = 219
+          ClientWidth = 466
+          object EdtToken: TLabeledEdit
+            Left = 8
+            Height = 28
+            Top = 128
+            Width = 436
+            EditLabel.Height = 20
+            EditLabel.Width = 436
+            EditLabel.Caption = 'Токен бота'
+            TabOrder = 0
+          end
+          object EdtChat: TLabeledEdit
+            Left = 8
+            Height = 28
+            Top = 184
+            Width = 288
+            EditLabel.Height = 20
+            EditLabel.Width = 288
+            EditLabel.Caption = 'ID чата (канал, группа или личный чат)'
+            TabOrder = 1
+          end
+          object ChckBxTelegram: TCheckBox
+            Left = 8
+            Height = 24
+            Top = 8
+            Width = 191
+            Caption = 'Синхронизировать счёт'
+            OnChange = ChckBxTelegramChange
+            TabOrder = 2
+          end
+          object ChckBxTelegramHandout: TCheckBox
+            Left = 8
+            Height = 24
+            Top = 64
+            Width = 399
+            Caption = 'Отправлять "раздатку" при разворачивании на экран'
+            TabOrder = 3
+          end
+          object ChckBxTelegramScoreWhileMaximize: TCheckBox
+            Left = 48
+            Height = 24
+            Top = 32
+            Width = 270
+            Caption = 'Только при разворачивании табло'
+            TabOrder = 4
+          end
+        end
+        object TbShtMonitors: TTabSheet
+          Caption = 'Мониторы'
+          ClientHeight = 219
+          ClientWidth = 466
+          object RdGrpMonitors: TRadioGroup
+            Left = 8
+            Height = 88
+            Top = 8
+            Width = 448
+            AutoFill = True
+            Caption = 'Мониторы'
+            ChildSizing.LeftRightSpacing = 6
+            ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+            ChildSizing.EnlargeVertical = crsHomogenousChildResize
+            ChildSizing.ShrinkHorizontal = crsScaleChilds
+            ChildSizing.ShrinkVertical = crsScaleChilds
+            ChildSizing.Layout = cclLeftToRightThenTopToBottom
+            ChildSizing.ControlsPerLine = 2
+            ClientHeight = 63
+            ClientWidth = 444
+            Columns = 2
+            ItemIndex = 0
+            Items.Strings = (
+              'Первый'
+              'Второй'
+            )
+            TabOrder = 0
+          end
+        end
+      end
+    end
+  end
   object BtnFullScreen: TButton
     Left = 16
     Height = 47
-    Top = 264
+    Top = 296
     Width = 448
     Caption = 'Развернуть/свернуть табло (F11)'
     OnClick = BtnFullScreenClick
-    TabOrder = 0
-  end
-  object SpnEdtScoreLeft: TSpinEdit
-    Left = 16
-    Height = 38
-    Top = 128
-    Width = 120
-    Font.Height = 30
-    MaxValue = 6
-    OnChange = SpnEdtScoreLeftChange
-    ParentFont = False
     TabOrder = 1
   end
-  object Label1: TLabel
-    Left = 24
-    Height = 20
-    Top = 104
-    Width = 74
-    Caption = 'Счет слева'
-    ParentColor = False
-  end
-  object SpnEdtScoreRight: TSpinEdit
-    Left = 256
-    Height = 38
-    Top = 128
-    Width = 120
-    Font.Height = 30
-    MaxValue = 6
-    OnChange = SpnEdtScoreRightChange
-    ParentFont = False
-    TabOrder = 2
-  end
-  object Label2: TLabel
-    Left = 264
-    Height = 20
-    Top = 104
-    Width = 84
-    Caption = 'Счет справа'
-    ParentColor = False
-  end
-  object EdtNameLeft: TLabeledEdit
+  object BtnHandout: TButton
     Left = 16
-    Height = 31
-    Top = 48
-    Width = 208
-    EditLabel.Height = 20
-    EditLabel.Width = 208
-    EditLabel.Caption = 'Слева'
-    EditLabel.ParentColor = False
-    Font.Height = 24
-    ParentFont = False
-    TabOrder = 3
-    OnChange = EdtNameLeftChange
-  end
-  object EdtNameRight: TLabeledEdit
-    Left = 256
-    Height = 31
-    Top = 48
-    Width = 208
-    EditLabel.Height = 20
-    EditLabel.Width = 208
-    EditLabel.Caption = 'Справа'
-    EditLabel.ParentColor = False
-    Font.Height = 24
-    ParentFont = False
-    TabOrder = 4
-    OnChange = EdtNameRightChange
-  end
-  object BtnScoreAddLeft: TButton
-    Left = 136
-    Height = 38
-    Top = 128
-    Width = 88
-    Caption = '+'
-    Font.Height = 30
-    Font.Style = [fsBold]
-    OnClick = BtnScoreAddLeftClick
-    ParentFont = False
-    TabOrder = 5
-  end
-  object BtnScoreAddRight: TButton
-    Left = 376
-    Height = 39
-    Top = 128
-    Width = 88
-    Caption = '+'
-    Font.Height = 30
-    Font.Style = [fsBold]
-    OnClick = BtnScoreAddRightClick
-    ParentFont = False
-    TabOrder = 6
-  end
-  object RdGrpMonitors: TRadioGroup
-    Left = 16
-    Height = 88
-    Top = 168
+    Height = 47
+    Top = 344
     Width = 448
-    AutoFill = True
-    Caption = 'Мониторы'
-    ChildSizing.LeftRightSpacing = 6
-    ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
-    ChildSizing.EnlargeVertical = crsHomogenousChildResize
-    ChildSizing.ShrinkHorizontal = crsScaleChilds
-    ChildSizing.ShrinkVertical = crsScaleChilds
-    ChildSizing.Layout = cclLeftToRightThenTopToBottom
-    ChildSizing.ControlsPerLine = 2
-    ClientHeight = 63
-    ClientWidth = 444
-    Columns = 2
-    ItemIndex = 0
-    Items.Strings = (
-      'Первый'
-      'Второй'
-    )
-    TabOrder = 7
+    Caption = 'Раздаточный материал (F11)'
+    OnClick = BtnHandoutClick
+    TabOrder = 2
   end
   object InPrpStrg: TIniPropStorage
     StoredValues = <>
-    Left = 90
-    Top = 109
+    Left = 296
+    Top = 40
   end
 end
