--- a/formcontrol.lfm
+++ b/formcontrol.lfm
@@ -2,10 +2,10 @@ object FrmControl: TFrmControl
   Left = 567
   Height = 414
   Top = 212
-  Width = 482
+  Width = 492
   Caption = 'Управление табло'
   ClientHeight = 414
-  ClientWidth = 482
+  ClientWidth = 492
   DefaultMonitor = dmDesktop
   DesignTimePPI = 120
   KeyPreview = True
@@ -13,13 +13,13 @@ object FrmControl: TFrmControl
   OnDestroy = FormDestroy
   OnShow = FormShow
   Position = poScreenCenter
-  SessionProperties = 'ChckBxTelegram.Checked;EdtChat.Text;EdtHandoutFile.FileName;EdtNameLeft.Text;EdtNameRight.Text;EdtToken.Text;RdGrpMonitors.ItemIndex;SpnEdtScoreLeft.Value;SpnEdtScoreRight.Value;ChckBxTelegramScoreWhileMaximize.Checked;ChckBxTelegramHandout.Checked'
+  SessionProperties = 'ChckBxTelegram.Checked;ChckBxTelegramHandout.Checked;ChckBxTelegramScoreWhileMaximize.Checked;EdtChat.Text;EdtNameLeft.Text;EdtNameRight.Text;EdtToken.Text;RdGrpMonitors.ItemIndex;SpnEdtScoreLeft.Value;SpnEdtScoreRight.Value'
   LCLVersion = '2.2.2.0'
   object PgCntrlMain: TPageControl
     Left = 0
     Height = 288
     Top = 0
-    Width = 482
+    Width = 492
     ActivePage = TbShtHome
     Align = alTop
     TabIndex = 0
@@ -27,102 +27,152 @@ object FrmControl: TFrmControl
     object TbShtHome: TTabSheet
       Caption = 'Управление'
       ClientHeight = 255
-      ClientWidth = 474
-      object SpnEdtScoreLeft: TSpinEdit
-        Left = 16
-        Height = 38
-        Top = 128
-        Width = 120
-        Font.Height = 30
-        MaxValue = 6
-        OnChange = SpnEdtScoreLeftChange
-        ParentFont = False
+      ClientWidth = 484
+      object PgCntrlControl: TPageControl
+        Left = 0
+        Height = 255
+        Top = 0
+        Width = 484
+        ActivePage = TbShtAnswers
+        Align = alClient
+        ParentShowHint = False
+        Style = tsFlatButtons
+        TabIndex = 1
         TabOrder = 0
-      end
-      object LblLeftScore: TLabel
-        Left = 24
-        Height = 20
-        Top = 104
-        Width = 74
-        Caption = 'Счет слева'
-        ParentColor = False
-      end
-      object SpnEdtScoreRight: TSpinEdit
-        Left = 256
-        Height = 38
-        Top = 128
-        Width = 120
-        Font.Height = 30
-        MaxValue = 6
-        OnChange = SpnEdtScoreRightChange
-        ParentFont = False
-        TabOrder = 1
-      end
-      object LblRightScore: TLabel
-        Left = 264
-        Height = 20
-        Top = 104
-        Width = 84
-        Caption = 'Счет справа'
-        ParentColor = False
-      end
-      object EdtNameLeft: TLabeledEdit
-        Left = 16
-        Height = 31
-        Top = 48
-        Width = 208
-        EditLabel.Height = 20
-        EditLabel.Width = 208
-        EditLabel.Caption = 'Слева'
-        EditLabel.ParentColor = False
-        Font.Height = 24
-        ParentFont = False
-        TabOrder = 2
-        OnChange = EdtNameLeftChange
-      end
-      object EdtNameRight: TLabeledEdit
-        Left = 256
-        Height = 31
-        Top = 48
-        Width = 208
-        EditLabel.Height = 20
-        EditLabel.Width = 208
-        EditLabel.Caption = 'Справа'
-        EditLabel.ParentColor = False
-        Font.Height = 24
-        ParentFont = False
-        TabOrder = 3
-        OnChange = EdtNameRightChange
-      end
-      object BtnScoreAddLeft: TButton
-        Left = 136
-        Height = 38
-        Top = 128
-        Width = 88
-        Caption = '+'
-        Font.Height = 30
-        Font.Style = [fsBold]
-        OnClick = BtnScoreAddLeftClick
-        ParentFont = False
-        TabOrder = 4
-      end
-      object BtnScoreAddRight: TButton
-        Left = 376
-        Height = 39
-        Top = 128
-        Width = 88
-        Caption = '+'
-        Font.Height = 30
-        Font.Style = [fsBold]
-        OnClick = BtnScoreAddRightClick
-        ParentFont = False
-        TabOrder = 5
+        object TbShtControlScore: TTabSheet
+          Caption = 'Счет'
+          ClientHeight = 219
+          ClientWidth = 476
+          object SpnEdtScoreLeft: TSpinEdit
+            Left = 16
+            Height = 38
+            Top = 128
+            Width = 120
+            Font.Height = 30
+            MaxValue = 6
+            OnChange = SpnEdtScoreLeftChange
+            ParentFont = False
+            TabOrder = 0
+          end
+          object LblLeftScore: TLabel
+            Left = 24
+            Height = 20
+            Top = 104
+            Width = 74
+            Caption = 'Счет слева'
+            ParentColor = False
+          end
+          object SpnEdtScoreRight: TSpinEdit
+            Left = 256
+            Height = 38
+            Top = 128
+            Width = 120
+            Font.Height = 30
+            MaxValue = 6
+            OnChange = SpnEdtScoreRightChange
+            ParentFont = False
+            TabOrder = 1
+          end
+          object LblRightScore: TLabel
+            Left = 264
+            Height = 20
+            Top = 104
+            Width = 84
+            Caption = 'Счет справа'
+            ParentColor = False
+          end
+          object EdtNameLeft: TLabeledEdit
+            Left = 16
+            Height = 31
+            Top = 48
+            Width = 208
+            EditLabel.Height = 20
+            EditLabel.Width = 208
+            EditLabel.Caption = 'Слева'
+            EditLabel.ParentColor = False
+            Font.Height = 24
+            ParentFont = False
+            TabOrder = 2
+            OnChange = EdtNameLeftChange
+          end
+          object EdtNameRight: TLabeledEdit
+            Left = 256
+            Height = 31
+            Top = 48
+            Width = 208
+            EditLabel.Height = 20
+            EditLabel.Width = 208
+            EditLabel.Caption = 'Справа'
+            EditLabel.ParentColor = False
+            Font.Height = 24
+            ParentFont = False
+            TabOrder = 3
+            OnChange = EdtNameRightChange
+          end
+          object BtnScoreAddLeft: TButton
+            Left = 136
+            Height = 38
+            Top = 128
+            Width = 88
+            Caption = '+'
+            Font.Height = 30
+            Font.Style = [fsBold]
+            OnClick = BtnScoreAddLeftClick
+            ParentFont = False
+            TabOrder = 4
+          end
+          object BtnScoreAddRight: TButton
+            Left = 376
+            Height = 39
+            Top = 128
+            Width = 88
+            Caption = '+'
+            Font.Height = 30
+            Font.Style = [fsBold]
+            OnClick = BtnScoreAddRightClick
+            ParentFont = False
+            TabOrder = 5
+          end
+        end
+        object TbShtAnswers: TTabSheet
+          Caption = 'Ответы'
+          ClientHeight = 219
+          ClientWidth = 476
+          object Memo1: TMemo
+            Left = 0
+            Height = 186
+            Top = 33
+            Width = 476
+            Align = alClient
+            Color = clBtnFace
+            ReadOnly = True
+            ScrollBars = ssAutoBoth
+            TabOrder = 0
+          end
+          object ToolBar1: TToolBar
+            Left = 0
+            Height = 33
+            Top = 0
+            Width = 476
+            Caption = 'ToolBar1'
+            TabOrder = 1
+            object TglBxReceive: TToggleBox
+              Left = 1
+              Height = 28
+              Top = 2
+              Width = 94
+              Caption = 'Принимать'
+              OnChange = TglBxReceiveChange
+              TabOrder = 0
+            end
+          end
+        end
       end
     end
     object TbShtHandout: TTabSheet
       Caption = 'Раздат. материал'
       ClientHeight = 255
-      ClientWidth = 474
+      ClientWidth = 484
       object EdtHandoutFile: TFileNameEdit
         Left = 8
         Height = 28
@@ -149,12 +199,12 @@ object FrmControl: TFrmControl
     object TbShtOptions: TTabSheet
       Caption = 'Настройки'
       ClientHeight = 255
-      ClientWidth = 474
+      ClientWidth = 484
       object PgCntrlOptions: TPageControl
         Left = 0
         Height = 255
         Top = 0
-        Width = 474
+        Width = 484
         ActivePage = TbShtTelegram
         Align = alClient
         Style = tsFlatButtons
@@ -163,7 +213,7 @@ object FrmControl: TFrmControl
         object TbShtTelegram: TTabSheet
           Caption = 'Телеграм'
           ClientHeight = 219
-          ClientWidth = 466
+          ClientWidth = 476
           object EdtToken: TLabeledEdit
             Left = 8
             Height = 28
@@ -215,7 +265,7 @@ object FrmControl: TFrmControl
         object TbShtMonitors: TTabSheet
           Caption = 'Мониторы'
           ClientHeight = 219
-          ClientWidth = 466
+          ClientWidth = 476
           object RdGrpMonitors: TRadioGroup
             Left = 8
             Height = 88
