--- a/formcontrol.lfm
+++ b/formcontrol.lfm
@@ -1,7 +1,7 @@
 object FrmControl: TFrmControl
-  Left = 567
+  Left = 712
   Height = 414
-  Top = 212
+  Top = 292
   Width = 492
   Caption = 'Управление табло'
   ClientHeight = 414
@@ -33,11 +33,11 @@ object FrmControl: TFrmControl
         Height = 255
         Top = 0
         Width = 484
-        ActivePage = TbShtAnswers
+        ActivePage = TbShtControlScore
         Align = alClient
         ParentShowHint = False
         Style = tsFlatButtons
-        TabIndex = 1
+        TabIndex = 0
         TabOrder = 0
         object TbShtControlScore: TTabSheet
           Caption = 'Счет'
