--- a/formcontrol.lfm
+++ b/formcontrol.lfm
@@ -20,9 +20,9 @@ object FrmControl: TFrmControl
     Height = 288
     Top = 0
     Width = 492
-    ActivePage = TbShtHome
+    ActivePage = TbShtOptions
     Align = alTop
-    TabIndex = 0
+    TabIndex = 2
     TabOrder = 0
     object TbShtHome: TTabSheet
       Caption = 'Управление'
